# boring-rpc

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TODOS.md  boring_rpc.ungram
crates/boring_rpc/: Cargo.toml
crates/boring_rpc/src/: args.rs  main.rs  run.rs
crates/boring_rpc_analyzer/: Cargo.toml
crates/boring_rpc_analyzer/src/: analyzer.rs  lib.rs  semantic_store.rs  store.rs  type_store.rs
crates/boring_rpc_analyzer/src/analyzer/: test_analyzer.rs
crates/boring_rpc_analyzer/src/semantic_store/: test_semantic_store.rs
crates/boring_rpc_analyzer/src/type_store/: test_import_decl.rs  test_infer_module.rs  test_infer_type_decl.rs  test_type_store.rs  test_utils.rs
crates/boring_rpc_analyzer/tests/type_store/: main.rs  test_import_decl.rs  test_infer_service_decl.rs  test_infer_type_decl.rs  test_utils.rs
crates/boring_rpc_axum/: Cargo.toml
crates/boring_rpc_axum/src/: boring_rpc.rs  lib.rs  macros.rs
crates/boring_rpc_common/: Cargo.toml
crates/boring_rpc_common/src/: lib.rs
crates/boring_rpc_compiler/: Cargo.toml
crates/boring_rpc_compiler/examples/: axum_router.rs
crates/boring_rpc_compiler/src/: compiler.rs  lib.rs
crates/boring_rpc_compiler/src/compiler/: test_compiler.rs  test_rust_axum.rs
crates/boring_rpc_parser/: Cargo.toml
crates/boring_rpc_parser/src/: lexed_str.rs  lib.rs  parser.rs
crates/boring_rpc_parser/src/parser/: test_parser.rs
crates/boring_rpc_printers/: Cargo.toml
crates/boring_rpc_printers/src/: lib.rs  rust_printer.rs  typescript_printer.rs
crates/boring_rpc_printers/src/rust_printer/: rust_printer_options.rs
crates/boring_rpc_resolver/: Cargo.toml
crates/boring_rpc_resolver/src/: lib.rs
crates/boring_rpc_syn/: Cargo.toml
crates/boring_rpc_syn/src/: generated.rs  green_node.rs  lib.rs  syn.rs
crates/boring_rpc_vfs/: Cargo.toml
crates/boring_rpc_vfs/src/: fs.rs  lib.rs  mem_fs.rs  vfs.rs
examples/rust-ts/: boring-rpc.json  build.sh  schema.br
examples/rust-ts/boring-rpc/: Message.br  User.br  schema.br
examples/rust-ts/server/: Cargo.toml
examples/rust-ts/server/src/: main.rs  schema.rs
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
xtask/src/codegen/: constants.rs  generate_syn.rs  rule_collector.rs  utils.rs
