[package]
name = "boring_rpc_printers"
version = "0.0.0"
edition = "2021"

[dependencies]
boring_rpc_analyzer = { path = "../boring_rpc_analyzer" }
prettyplease = "0.2.25"
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
syn = "2.0.90"

[dev-dependencies]
expect-test = "1.5.0"
